<resources>
    <string name="app_name">PhysicalRegatta</string>
    <string name="itm_lang">Languages</string>
    <string name="itm_exit">Exit</string>
    <string name="itm_about">About</string>
    <string name="txt_about">Copyright 2017 Malah</string>
    <string name="lbl_challenge">Challenge:</string>
    <string name="lbl_regatta">Regatta:</string>
    <string name="lbl_compete">Number of Sailboat:</string>
    <string name="lbl_jury">Jury:</string>
    <string name="lbl_auditor">Auditor:</string>
    <string name="lbl_distance">Distance:</string>
    <string name="lbl_serie">Serie:</string>
    <string name="lbl_class">Class:</string>
    <string name="btn_return">Return</string>
    <string name="btn_result">Result</string>
    <string name="position">Position</string>
    <string name="owner">Owner (N°Sail)</string>
    <string name="time">Time/Err</string>
    <string name="no_challenge">No challenge found!</string>
    <string name="num_sail">N° Sail</string>
    <string name="select_serie">Select a serie</string>
    <string name="select_class">Select a class</string>
    <string name="result">Result</string>
    <string name="hide_no_result">Hide sailboat with no result entered</string>
    <string name="lbl_info">Select the regatta on which you want to see more information.</string>
    <string name="regatta">Regatta</string>
    <string name="date">Date</string>
    <string name="jury">Jury</string>
    <string name="auditor">Auditor</string>
</resources>
