<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lbl_challenge"
            android:layout_height="wrap_content"
            android:id="@+id/lblChallenge"
            android:layout_weight="1"
            android:layout_width="150dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtChallenge"
            android:layout_weight="1"
            android:text="challenge"
            android:textStyle="bold"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lbl_regatta"
            android:layout_height="wrap_content"
            android:id="@+id/lblRegatta"
            android:layout_weight="1"
            android:layout_width="150dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtRegatta"
            android:layout_weight="1"
            android:text="regatta"
            android:textStyle="bold"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lbl_distance"
            android:layout_height="wrap_content"
            android:id="@+id/lblDistance"
            android:layout_weight="1"
            android:layout_width="300dp" />

        <TextView
            android:text="distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDistance"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lbl_compete"
            android:layout_height="wrap_content"
            android:id="@+id/lblCompete"
            android:layout_weight="1"
            android:layout_width="300dp" />

        <TextView
            android:text="compete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCompete"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <TextView
        android:text="@string/jury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblJury"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/lstJury"
        android:background="@android:color/darker_gray"
        android:layout_height="350px"
        android:clickable="false" />

    <TextView
        android:text="@string/auditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblAuditor"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/lstAuditor"
        android:background="@android:color/darker_gray"
        android:layout_height="350px"
        android:clickable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/btn_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnResult"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>