<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="afpa.ecf.physicalregatta.android.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/lbl_challenge"
                android:layout_height="wrap_content"
                android:id="@+id/lblChallenge"
                android:layout_width="100dp" />

            <TextView
                android:text="challenge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtChallenge"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:text="@string/lbl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblInfo"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textStyle="normal|bold|italic" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/regatta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblRegatta"
                android:layout_weight="1" />

            <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblDate"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lstRegatta" />

    </LinearLayout>

</RelativeLayout>
